--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,6 @@
     <string name="stMostrarEntreFechas">Mostrar entre fechas</string>
     <string name="stConfigurar">Configurar</string>
     <string name="stAcercaDe">Acerca de...</string>
+    <string name="stAsc">Asc</string>
+    <string name="stDesc">Desc</string>
 </resources>
