--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="stComoTeLlamamos">Con que nombre quieres que nos dirijamos a ti</string>
     <string name="stPreguntaGenero">Eres...</string>
     <string name="stPreguntaGeneroDescripcion">Eres un/una...</string>
+    <string name="stAvisarEscribir">Avisar escribir en Diario</string>
+    <string name="stAvisarEscribirDescripcion">Desea que le avisemos que tiene que escribir en el diario</string>
 </resources>
