--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -49,4 +49,5 @@
     <string name="stPreguntaGenero">Eres...</string>
     <string name="stAvisarEscribir">Avisar escribir en Diario</string>
     <string name="stAvisarEscribirDescripcion">Desea que le avisemos que tiene que escribir en el diario</string>
+    <string name="stSeleccioneImagen">Seleccione una imagen</string>
 </resources>
