--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="stPreguntaGeneroDescripcion">Eres un/una...</string>
     <string name="stAvisarEscribir">Avisar escribir en Diario</string>
     <string name="stAvisarEscribirDescripcion">Desea que le avisemos que tiene que escribir en el diario</string>
+    <string name="stSeleccioneImagen">Seleccione una imagen</string>
 </resources>
